# AudioVis

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
include/: Audio_task.h  LED_task.h
main/: Audio_task.c  Audio_task.h  CMakeLists.txt  LED_task.c  LED_task.h  main.c  matrix_wrapper.cpp
main/include/: Audio_task.h  LED_task.h  matrix_wrapper.h
main/src/: Audio_task.c  CMakeLists.txt  LED_task.c  main.c  matrix_wrapper.cpp
main/testFiles/: BandAmps.c  a.out
pcbStuff/: #auto_saved_files#  AudioVis.kicad_prl  AudioVis.kicad_pro  AudioVis.kicad_sch  AudioVis.kicad_sch-bak  _autosave-AudioVis.kicad_sch  fp-info-cache  ~AudioVis.kicad_pcb.lck
src/: Audio_task.c  CMakeLists.txt  INMP441.h  LED_task.c  main.c  testingFFT.c
test/: logBins.c  rawAudioVisuals.py  testingLEDMatrix.c  testingVisualization.py  testingVisualizationMatPlot.py
test/testFFT/: CMakeLists.txt
test/testFFT/main/src/: Audio_task.c  CMakeLists.txt  main.c
test/testLEDLib/: CMakeLists.txt
test/testLEDLib/main/: Audio_task.c  Audio_task.h  CMakeLists.txt  LED_task.c  main.c  matrix_wrapper.cpp  matrix_wrapper.h
test/testLEDLib/main/oldMain/: main.cpp
test/testLEDLib/main/testFiles/: LEDLevels.c
test/testMic/: CMakeLists.txt
test/testMic/main/: CMakeLists.txt  testINMP441.c
